fix: fix text is too close with image in cart page

--- a/src/features/Order/components/OrderSummary.scss
+++ b/src/features/Order/components/OrderSummary.scss
@@ -10,6 +10,7 @@
 
          img {
             height: 100px;
+            margin-right: 20px;
             object-fit: cover;
          }
 
